--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -151,7 +151,10 @@
 			margin-top: -155px;
 		}
 		.grid{
-			margin-bottom: 20px;
+			width: 100%;
+			padding-left: 20px;
+			margin: 20px 0;
+			box-sizing: border-box;
 			.sprtr-h{ margin: 20px 0; }
 			input[type="checkbox"]{
 				& + label.col{
