--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -24,7 +24,9 @@
 		width: 100%;
 		height: 100%;
 		padding-right: 20px;
+		position: relative;
 		overflow: auto;
+		overflow-x: hidden;
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -148,7 +150,7 @@
 	margin: 0 20px 0 0;
 	overflow: hidden;
 	.text-holder{
-		p{ padding: 20px 20px 0; }
+		p{ padding: 20px 20px; }
 	}
 	.outer.scrollable-holder{
 		padding: 70px 0 40px;
