--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -1,7 +1,7 @@
 @import "lib/common.less";
 @import "lib/forms.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start							  */
+/*	layout start							  					*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer{
 	& > .inner{
@@ -13,11 +13,11 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout end								  */
+/*	layout end								  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	intro start								  */
+/*	intro start								 				 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer.intro-holder{
 	width: 100%;
@@ -78,11 +78,11 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	intro end								  */
+/*	intro end								  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	project start							  */
+/*	project start							 				 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer.project-holder{
 	p{
@@ -186,6 +186,7 @@
 	}
 	span{
 		display: inline-block;
+		vertical-align: middle;
 		text-transform: uppercase;
 		font-size: 1.5em;
 		color: @green;
@@ -195,12 +196,10 @@
 		padding-left: 20px;
 	}
 	span.hr-play{
-		display: block;
+		display: inline-block;
+		vertical-align: middle;
 		width: 40px;
 		height: 40px;
-		position: absolute;
-		top: 0;
-		left: 0;
 		font-size: 2.5em;
 		animation: pulse 2s @easing 0s infinite;
 		&:before{
@@ -210,7 +209,7 @@
 }
 @keyframes pulse{
 	0% { transform: scale(1); }
-	50% { transform: scale(.95); }
+	50% { transform: scale(1.1); }
 	100% { transform: scale(1); }
 }
 #movie-holder{
@@ -282,11 +281,11 @@
 .outer.suppliers-holder{
 	background: @grey;
 	.inner{
-		max-width: 1200px;
+		max-width: 100%;
 	}
 	.suppliers{
 		width: 100%;
-		margin: 40px auto 20px;
+		margin: 20px auto;
 		text-align: center;
 		li{
 			display: inline-block;
@@ -294,7 +293,7 @@
 			width: 120px;
 			height: auto;
 			position: relative;
-			margin: 0 20px 40px;
+			margin-bottom: 40px;
 			figure{
 				display: block;
 				width: 100%;
